--- a/OOPKursach/OOPKursach/MainWindow.xaml
+++ b/OOPKursach/OOPKursach/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OOPKursach.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="700" Width="1200" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="700" Width="1200" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" FontSize="20" FontFamily="Comic Sans MS">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -10,16 +10,16 @@
         <StackPanel Grid.Row="0" Orientation="Horizontal">
             <Button Name="startButton" Click="startButton_Click" Margin="5" Padding="3">Старт</Button>
             <Label Margin="5" Padding="3">Ваш счет:</Label>
-            <Label Name="pointsLabel" Margin="5" Padding="3"></Label>
+            <Label Name="pointsLabel" Margin="5" Padding="3" FontWeight="Bold" Foreground="Red" Width="30"></Label>
 
-            <Label Margin="5" Padding="3">Шаров на экране:</Label>
-            <Label Margin="5" Padding="3" Name="imagesLabel"></Label>
+            <Label Margin="5" Padding="3">Фигур на экране:</Label>
+            <Label Margin="5" Padding="3" Name="imagesLabel" Width="30"></Label>
 
-            <Button Name="aboutButton" Margin="800,5,800,0" Height="26" Click="aboutButton_Click">Автор</Button>
+            <Button Name="aboutButton" Margin="650,5" Padding="3" Click="aboutButton_Click">Автор</Button>
         </StackPanel>
         <Canvas Grid.Row="1" Name="canvas" Background="Beige">
             
         </Canvas>
-        <Label Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red" FontSize="50" FontWeight="Bold" Visibility="Collapsed" Name="loseLabel">Вы проиграли</Label>
+        <Label Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red" Background="AliceBlue" FontSize="70" FontWeight="Bold" Visibility="Collapsed" Name="loseLabel">Вы проиграли</Label>
     </Grid>
 </Window>
